<resources>
    <string name="app_name">简新闻</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="icon_anzhuang">&#xe642;</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!-- 常见网络错误工厂类-->
    <string name="error_unkown">未知错误</string>
    <string name="error_http">网络连接错误</string>
    <string name="error_system">服务器错误</string>
    <string name="error_account_freeze">账号被冻结，请联系管理员</string>
    <string name="error_api_no_perission">调用了无权限的API接口</string>
    <string name="error_login">用户名或密码错误</string>
    <string name="error_http_400">bad request</string>
    <string name="error_http_404">服务器资源找不到</string>
    <string name="error_http_405">对于请求所标识的资源，不允许使用请求行中所指定的方法</string>
    <string name="error_http_500">服务器错误</string>
    <string name="error_socket_timeout">网络超时</string>
    <string name="error_socket_unreachable">网络不可用</string>
    <string name="error_token">token失效,请重新登录</string>
    <string name="loading">正在加载中....</string>
    <string name="empty_data">重新刷新</string>
    <string name="mobi">手机号</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="RegisteredAccountNumber">注册账号</string>
    <string name="temporary_no_login">暂不登录</string>
    <string name="default_loading">正在登录</string>
    <string name="login_loading">登录</string>
</resources>